<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFFBF9"
    android:orientation="vertical"
    tools:context=".ResultadosActivity">

    <TextView
        android:id="@+id/txtFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/stringFinal"
        android:textColor="#04100F"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtPuntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/txtPuntuacion"
        android:textColor="#04100F"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#264653"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imgPartenon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgPartenonDescription"
        app:srcCompat="@drawable/partenon" />

    <RadioGroup
        android:id="@+id/radioGroupResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="56dp">

        <RadioButton
            android:id="@+id/radioCompartir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:drawableLeft="@drawable/ic_baseline_share_24"
            android:onClick="compartir"
            android:text="@string/radioCompartir" />

        <RadioButton
            android:id="@+id/radioReiniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_loop_24"
            android:drawableLeft="@drawable/ic_baseline_loop_24"
            android:onClick="reiniciar"
            android:text="@string/radioReiniciar" />

        <RadioButton
            android:id="@+id/radioSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
            android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
            android:onClick="terminar"
            android:text="@string/radioSalir" />

    </RadioGroup>

</LinearLayout>