<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFFBF9"
    android:orientation="vertical"
    tools:context=".PreguntaImagenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNumeroPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/placeholder_NumeroPregunta"
            android:textColor="#04100F"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:text="@string/placeholder_Pregunta"
            android:textColor="#04100F"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img0"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="52dp"
                    android:contentDescription="@string/imagePlaceholderDescription" />

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="52dp"
                    android:contentDescription="@string/imagePlaceholderDescription" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="52dp"
                    android:contentDescription="@string/imagePlaceholderDescription" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="52dp"
                    android:contentDescription="@string/imagePlaceholderDescription" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="#E9C46A"
        android:drawableStart="@drawable/ic_baseline_loop_24"
        android:drawableLeft="@drawable/ic_baseline_loop_24"
        android:text="@string/stringReiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="#E9C46A"
        android:contentDescription="@string/imgAyuda"
        android:drawableStart="@drawable/ic_baseline_help_24"
        android:drawableLeft="@drawable/ic_baseline_help_24"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSiguiente"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/btnReiniciar" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#E9C46A"
        android:drawableStart="@drawable/ic_baseline_navigate_next_24"
        android:drawableLeft="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/stringSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>