<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFFBF9"
    tools:context=".RespuestaFinal">

    <TextView
        android:id="@+id/txtNumeroPregunta"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/placeholder_NumeroPregunta"
        android:textColor="#04100F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPregunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/placeholder_Pregunta"
        android:textColor="#04100F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroPregunta" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="38dp"
        android:background="#E9C46A"
        android:drawableStart="@drawable/ic_baseline_loop_24"
        android:drawableLeft="@drawable/ic_baseline_loop_24"
        android:onClick="reiniciar"
        android:text="@string/stringReiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="38dp"
        android:background="#E9C46A"
        android:drawableStart="@drawable/ic_baseline_navigate_next_24"
        android:drawableLeft="@drawable/ic_baseline_navigate_next_24"
        android:onClick="continuar"
        android:text="@string/stringSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img0"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="42dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="42dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/img0"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="42dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/img3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img0"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>